added Incredible  area

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,13 @@ input[name='panel']:checked ~ .accordion__content {
   /* Get this as close to what height you expect */
   max-height: 50em;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
